--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="img/fun-bus.jpg" class="image" alt="Fun Bus" />
       <div class="intro-content">
         <h2 class="intro-title">Welcome To Fun Bus!</h2>
-        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty desing website expedition.</p>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
     </section>
     <section class="content-section">
       <div class="text-content">
